# gameboy-emulator

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/app/: mod.rs  widgets.rs
src/boot/: error.rs  mod.rs
src/bus/: mod.rs
src/cartridge/: error.rs  header.rs  mappers.rs  mod.rs  ram.rs
src/config/: mod.rs
src/cpu/: alu.rs  bus.rs  decoder.rs  error.rs  execution_state.rs  instruction.rs  memory.rs  mod.rs
src/io/: audio.rs  dma.rs  interrupts.rs  joypad.rs  lcd.rs  mod.rs  serial.rs  timer.rs
src/memory/: mod.rs  ram.rs
src/ppu/: mod.rs  oam.rs  vram.rs
