[package]
name = "gameboy-emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui_extras = { version = "0.31", features = ["default", "all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] }
clap = { version = "4.5", features = ["derive"] }
native-dialog = { version = "0.7.0", features = ["windows_dpi_awareness"] }
preferences = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }